--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,18 @@ bin/
 
 ### Mac OS ###
 .DS_Store
+
+### CMake template
+CMakeLists.txt.user
+CMakeCache.txt
+CMakeFiles
+CMakeScripts
+Testing
+Makefile
+cmake_install.cmake
+install_manifest.txt
+compile_commands.json
+CTestTestfile.cmake
+_deps
+CMakeUserPresets.json
+
